; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/wps/extr_wps_attr_parse.c_wps_parse_vendor_ext_wfa.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/wps/extr_wps_attr_parse.c_wps_parse_vendor_ext_wfa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wps_parse_attr = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wps_parse_attr*, i32*, i32)* @wps_parse_vendor_ext_wfa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wps_parse_vendor_ext_wfa(%struct.wps_parse_attr* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.wps_parse_attr*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.wps_parse_attr* %0, %struct.wps_parse_attr** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i32, i32* %11, i64 %13
  store i32* %14, i32** %8, align 8
  br label %15

15:                                               ; preds = %42, %3
  %16 = load i32*, i32** %6, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 2
  %18 = load i32*, i32** %8, align 8
  %19 = icmp ult i32* %17, %18
  br i1 %19, label %20, label %47

20:                                               ; preds = %15
  %21 = load i32*, i32** %6, align 8
  %22 = getelementptr inbounds i32, i32* %21, i32 1
  store i32* %22, i32** %6, align 8
  %23 = load i32, i32* %21, align 4
  store i32 %23, i32* %9, align 4
  %24 = load i32*, i32** %6, align 8
  %25 = getelementptr inbounds i32, i32* %24, i32 1
  store i32* %25, i32** %6, align 8
  %26 = load i32, i32* %24, align 4
  store i32 %26, i32* %10, align 4
  %27 = load i32*, i32** %6, align 8
  %28 = load i32, i32* %10, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  %31 = load i32*, i32** %8, align 8
  %32 = icmp ugt i32* %30, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %20
  br label %47

34:                                               ; preds = %20
  %35 = load %struct.wps_parse_attr*, %struct.wps_parse_attr** %5, align 8
  %36 = load i32, i32* %9, align 4
  %37 = load i32, i32* %10, align 4
  %38 = load i32*, i32** %6, align 8
  %39 = call i64 @wps_set_vendor_ext_wfa_subelem(%struct.wps_parse_attr* %35, i32 %36, i32 %37, i32* %38)
  %40 = icmp slt i64 %39, 0
  br i1 %40, label %41, label %42

41:                                               ; preds = %34
  store i32 -1, i32* %4, align 4
  br label %48

42:                                               ; preds = %34
  %43 = load i32, i32* %10, align 4
  %44 = load i32*, i32** %6, align 8
  %45 = sext i32 %43 to i64
  %46 = getelementptr inbounds i32, i32* %44, i64 %45
  store i32* %46, i32** %6, align 8
  br label %15

47:                                               ; preds = %33, %15
  store i32 0, i32* %4, align 4
  br label %48

48:                                               ; preds = %47, %41
  %49 = load i32, i32* %4, align 4
  ret i32 %49
}

declare dso_local i64 @wps_set_vendor_ext_wfa_subelem(%struct.wps_parse_attr*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
